@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="legend.basics">Pengaturan Bahasa</label>
+	<label index="legend.changePassword">Ganti Sandi Anda</label>
+</labels>
