@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="general">Pengaturan Umum</label>
+	<label index="general.use">Gunakan Fungsional Profil</label>
+	<label index="settings">Pengaturan Account</label>
+	<label index="settings.password">Ubah Sandi</label>
+</labels>
