@@ -1,5 +1,8 @@
 todoyu profile extension changelog
 
+profile 1.3.2 - not released yet
+	* Added: Indonesian Language. Credits to Abdush Shomad.
+
 profile 1.3.1 - 2013-12-31
 	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
 
